// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wrapper it should have interactive styles 1`] = `
.c0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 2px;
  padding: 2px;
  border-radius: 3px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
}

.c0:hover {
  background-color: #F4F5F7;
}

.c0:active {
  background-color: #DEEBFF;
}

.c0:focus {
  cursor: pointer;
  box-shadow: 0 0 0 2px #4C9AFF;
  outline: none;
}

<span
  className="c0"
/>
`;

exports[`Wrapper it should have selected styles 1`] = `
.c0 {
  cursor: pointer;
  box-shadow: 0 0 0 2px #4C9AFF;
  outline: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 2px;
  padding: 2px;
  border-radius: 3px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
}

<span
  className="c0"
/>
`;

exports[`Wrapper it should not have interactive or selected styles 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 2px;
  padding: 2px;
  border-radius: 3px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
}

<span
  className="c0"
/>
`;
